@@ -66,8 +66,10 @@ index_statement
 create_table_statement
   : CREATE EXTERNAL TABLE table_name table_elements USING file_type=Identifier
     (param_clause)? (table_partitioning_clauses)? (LOCATION path=Character_String_Literal)
-  | CREATE TABLE table_name (table_elements)? (USING file_type=Identifier)?
+  | CREATE TABLE table_name table_elements (USING file_type=Identifier)?
     (param_clause)? (table_partitioning_clauses)? (AS query_expression)?
+  | CREATE TABLE table_name (USING file_type=Identifier)?
+    (param_clause)? (table_partitioning_clauses)? AS query_expression
   ;
 
 table_elements
